Ajustes para rodar em java 8 com h2